# etf-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: etf-alert.yml  etf-daily.yml
config/: clusters.yaml  labels.yaml  thresholds.yaml
data/: mock_preview.json
deploy/: nishi-etf-tracker.service
scripts/: addresses_input.example.txt  bitwise_arkham.tsv  blackrock_arkham.tsv  build_labels.py  fidelity_feth_arkham.tsv  grayscale_arkham.tsv  ingest_addresses.py  parse_arkham_csv.py  preview_mock.py
src/: ai_summary.py  config.py  counterparty.py  db.py  flows.py  format_embed.py  format_x.py  labels.py  main.py  notable.py  render_image.py  send_discord.py
src/clients/: coingecko_client.py  etherscan_client.py  mempool_client.py  x_client.py
src/jp_translator/: __init__.py  config.py  core.py  providers.py
